--- a/code/survival_analysis.Rmd
+++ b/code/survival_analysis.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Survival analysis"
-output: ioslides_presentation
+output: html_document
 ---
 
 ```{r setup, include=FALSE}
@@ -19,26 +19,27 @@ Compared to the adjuvant chemotherapy group, patients in the surveillence group 
 
 ```{r,echo=FALSE,warning=FALSE}
 tbl_summary(data=clinical_multi_df[,!c('patient_id')],
-            by='adjuvant_management',
+            by='patient_group',
             label = list(age_at_diagnosis ~ 'Age at diagnosis',
                          os_time ~ 'Follow up time',
                          os_status ~ 'Number of overall death',
                          pfs_time ~ 'Progression free survival time',
                          pfs_status ~ 'Number of disease progression',
-                         R_status ~ 'R status',
-                         TRG_status ~ 'TRG status',
-                         distance_anal_verge_final ~ 'Distance from anal verge',
-                         histological_grade_baseline ~ 'Baseline histological grade',
-                         cancer_stage_yp~ 'Cancer staging post surgery',
-                         time_interval_RT_surgery ~ 'Time between radiotherapy and surgery',
-                         cancer_stage_yp_RT~'Cancer staging post radiotherapy'),
+                         patient_group ~ 'patient group',
+                         figo_staging ~ 'figo staging',
+                         performance_status ~ 'performance status',
+                         brca_status ~ 'brca status',
+                         surgical_outcome ~ 'surgical outcome',
+                         maintenance_therapy ~ 'maintenance therapy'),
             missing='no',
             theme_gtsummary_journal(journal='jama')) %>%
   add_n() %>% # add column with total number of non-missing observations
   add_p() %>% # test for a difference between groups
   modify_header(label = "**Variable**",
-                stat_1 = '**Adjuvant chemotherapy**',
-                stat_2 = '**Surveillence**') %>% # update the column header
+                stat_1 = '**3 cycle surgery**',
+                stat_2 = '**6 cycle chemo change surgery**',
+                stat_3 = '**6 cycle no chemo change surgery**',
+                stat_4 = "**6 cycle no surgery**") %>% # update the column header
   bold_labels()
 
 
@@ -49,7 +50,7 @@ tbl_summary(data=clinical_multi_df[,!c('patient_id')],
 ## KM Survival curve w.r.t overall survival
 
 Plot KM curve with respect to adjuvant management option: adjuvant chemo vs surveillence
-```{r KM curve os,echo=FALSE,fig.width=3.5, fig.height=1.8,warning=FALSE}
+```{r KM curve os,echo=FALSE,warning=FALSE}
 
 survminer::ggsurvplot(
   fit = survfit(Surv(time=os_time,event=os_status) ~ patient_group, data = clinical_df),
@@ -71,7 +72,7 @@ survminer::ggsurvplot(
 
 ```
 
-## KM Survival curve w.r.t recurrence free survival
+## KM Survival curve w.r.t progression free survival
 
 Plot KM curve with respect to adjuvant management option: adjuvant chemo vs surveillence
 ```{r KM curve rfs,echo=FALSE,warning=FALSE}
@@ -79,7 +80,7 @@ Plot KM curve with respect to adjuvant management option: adjuvant chemo vs surv
 survminer::ggsurvplot(
   fit = survfit(Surv(time=pfs_time,event=pfs_status) ~ patient_group, data = clinical_df), 
   xlab = "Years", 
-  ylab = "Recurrence free survival probability",
+  ylab = "Progression free survival probability",
   # risk.table = T,
   pval=T,
   pval.method=T,
@@ -117,27 +118,24 @@ ggplot(data=na_pattern_plot_df)+
 
 ## Multivariate cox regression
 
-Cox analysis for overall survival adjusting for the following clinical parameters: age at diagnosis,R status, EMVI, CRM, distance anal verge, baseline histological grade, cancer staging after surgery
+Cox analysis for overall survival adjusting for the following clinical parameters: age at diagnosis, , baseline histological grade, cancer staging after surgery
 
 ```{r multi-cox os, echo=FALSE}
 
-coxph(Surv(time=os_time,event=os_status) ~ patient_grouping+age_at_diagnosis+figo_staging+performance_status+brca_status+
-        surgical_outcome+time_interval_RT_surgery,
-      data = clinical_multi_df)
+coxph(Surv(time=os_time,event=os_status) ~ patient_group+age_at_diagnosis+figo_staging+performance_status+brca_status+
+        surgical_outcome+maintenance_therapy, data = clinical_multi_df)
 
 
 ```
 
+## Multivariate cox regression with pfs
 
-## Multivariate cox regression with rfs
+Cox analysis for recurrence free survival adjusting 
 
-Cox analysis for recurrence free survival adjusting for the following: age at diagnosis,R status, EMVI, CRM, distance anal verge, baseline histological grade, cancer staging after surgery
+```{r multi-cox pfs, echo=FALSE}
 
-```{r multi-cox rfs, echo=FALSE}
-
-coxph(Surv(time=rfs_time,event=rfs_status) ~ adjuvant_management+age_at_diagnosis+R_status+EMVI+CRM+distance_anal_verge_final+
-        histological_grade_baseline+time_interval_RT_surgery+
-        cancer_stage_yp_RT+cancer_stage_yp, data = clinical_multi_df)
+coxph(Surv(time=pfs_time,event=pfs_status) ~ patient_group+age_at_diagnosis+figo_staging+performance_status+brca_status+
+        surgical_outcome+maintenance_therapy, data = clinical_df)
 
 ```
 
@@ -146,42 +144,37 @@ coxph(Surv(time=rfs_time,event=rfs_status) ~ adjuvant_management+age_at_diagnosi
 ```{r cox table,echo=FALSE}
 
 os_surv_table <-coxph(Surv(time=os_time,event=os_status) ~
-                        adjuvant_management+age_at_diagnosis+R_status+TRG_status+
-                        EMVI+CRM+distance_anal_verge_final+
-                        histological_grade_baseline+time_interval_RT_surgery+
-                        cancer_stage_yp_RT+cancer_stage_yp, 
+                        patient_group+age_at_diagnosis+figo_staging+performance_status+
+                        brca_status+surgical_outcome+maintenance_therapy,
                       data = clinical_multi_df) %>%
   tbl_regression(exponentiate = TRUE,
-                 label = list(age_at_diagnosis ~ 'Age at diagnosis',
-                              R_status ~ 'R status',
-                              TRG_status ~ 'TRG status',
-                              distance_anal_verge_final ~ 'Distance from anal verge',
-                              histological_grade_baseline ~ 'Baseline histological grade',
-                              cancer_stage_yp ~ 'Cancer staging post surgery',
-                              time_interval_RT_surgery ~ 'Time between radiotherapy and surgery',
-                              cancer_stage_yp_RT~'Cancer staging post radiotherapy')) %>%
+                 label = list(age_at_diagnosis ~ 'age at diagnosis',
+                              patient_group ~ 'patient group',
+                              figo_staging ~ 'figo staging',
+                              performance_status ~ 'performance status',
+                              brca_status ~ 'brca status',
+                              surgical_outcome ~ 'surgical outcome',
+                              maintenance_therapy ~ 'maintenance therapy')) %>%
   add_n()
 
-rfs_surv_table <-coxph(Surv(time=rfs_time,event=rfs_status) ~
-                         adjuvant_management+age_at_diagnosis+R_status+TRG_status+
-                         +EMVI+CRM+distance_anal_verge_final+
-                         histological_grade_baseline+time_interval_RT_surgery+
-                         cancer_stage_yp+cancer_stage_yp_RT, data = clinical_multi_df) %>%
+pfs_surv_table <-coxph(Surv(time=pfs_time,event=pfs_status) ~
+                         patient_group+age_at_diagnosis+figo_staging+performance_status+
+                         brca_status+surgical_outcome+maintenance_therapy, 
+                       data = clinical_multi_df) %>%
   tbl_regression(exponentiate = TRUE,
-                 label = list(age_at_diagnosis ~ 'Age at diagnosis',
-                              R_status ~ 'R status',
-                              TRG_status ~ 'TRG status',
-                              distance_anal_verge_final ~ 'Distance from anal verge',
-                              histological_grade_baseline ~ 'Baseline histological grade',
-                              cancer_stage_yp~ 'Cancer staging post surgery',
-                              time_interval_RT_surgery ~ 'Time between radiotherapy and surgery',
-                              cancer_stage_yp_RT~'Cancer staging post radiotherapy')) %>%
+                 label = list(age_at_diagnosis ~ 'age at diagnosis',
+                              patient_group ~ 'patient group',
+                              figo_staging ~ 'figo staging',
+                              performance_status ~ 'performance status',
+                              brca_status ~ 'brca status',
+                              surgical_outcome ~ 'surgical outcome',
+                              maintenance_therapy ~ 'maintenance therapy')) %>%
   add_n()
 
 combined_survival_table <-
   tbl_merge(
-    tbls = list(os_surv_table, rfs_surv_table),
-    tab_spanner = c("**Overall survival**", "**Recurrence free survival**")
+    tbls = list(os_surv_table, pfs_surv_table),
+    tab_spanner = c("**Overall survival**", "**Progression free survival**")
   )
 
 combined_survival_table
