--- a/code/survival_analysis.Rmd
+++ b/code/survival_analysis.Rmd
@@ -1,6 +1,8 @@
 ---
-title: "Survival analysis"
-output: html_document
+title: "HGSOC survival analysis"
+output: 
+  html_document:
+    number_sections: true
 ---
 
 ```{r setup, include=FALSE}
@@ -8,100 +10,25 @@ library(survival)
 # library(ggpubr)
 library(flextable)
 library(gtsummary)
+library(logistf)
 source(here::here('code','initiation.R'))
 source(here('code','data_preparation.R'))
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-## Clinical summary table
+> Multiple studies have assessed the timing of surgery in high grade serous ovarian cancer (HGSOC). There is some evidence that neoadjuvant chemotherapy (NACT) followed by interval debulking surgery is non-inferior to primary cytoreductive surgery. The ICON 8b study results are awaited to evaluate the use of upfront bevacizumab in these patients. However, there is currently limited evidence supporting switching chemotherapy regimens after 3 cycles of NACT when disease remains inoperable. In this retrospective study, we evaluated survival outcomes following a change of chemotherapy regimen in previously inoperable patients. 
 
-Compared to the adjuvant chemotherapy group, patients in the surveillence group tends to be older and present with better prognostic profile. 
+>The research questions in this project are three-fold:
 
-```{r,echo=FALSE,warning=FALSE}
-tbl_summary(data=clinical_multi_df[,!c('patient_id')],
-            by='patient_group',
-            label = list(age_at_diagnosis ~ 'Age at diagnosis',
-                         os_time ~ 'Follow up time',
-                         os_status ~ 'Number of overall death',
-                         pfs_time ~ 'Progression free survival time',
-                         pfs_status ~ 'Number of disease progression',
-                         patient_group ~ 'patient group',
-                         figo_staging ~ 'figo staging',
-                         performance_status ~ 'performance status',
-                         brca_status ~ 'brca status',
-                         surgical_outcome ~ 'surgical outcome',
-                         maintenance_therapy ~ 'maintenance therapy'),
-            missing='no',
-            theme_gtsummary_journal(journal='jama')) %>%
-  add_n() %>% # add column with total number of non-missing observations
-  add_p() %>% # test for a difference between groups
-  # modify_header(label = "**Variable**",
-  #               stat_1 = '**3 cycle surgery**',
-  #               stat_2 = '**6 cycle chemo change surgery**',
-  #               stat_3 = '**6 cycle no chemo change surgery**',
-  #               stat_4 = "**6 cycle no surgery**") %>% # update the column header
-  bold_labels()
+1. Within patient who were eventually operated, is there any survival difference between patient who received operation after 3 cycles or after 6 cycles of NACT?
+2. Within patient who weren't operable after 3 cycles of NACT and operable after 6 cycles of NACT, did switch in chemotherapy offer a survival advantage?
+3. What are the predictors of eventual surgical inoperabilities, if any?
 
-
-
-```
-
-
-## KM Survival curve w.r.t overall survival
-
-Plot KM curve with respect to adjuvant management option: adjuvant chemo vs surveillence
-```{r KM curve os,echo=FALSE,warning=FALSE}
-
-survminer::ggsurvplot(
-  fit = survfit(Surv(time=os_time,event=os_status) ~ patient_group, data = clinical_df),
-  xlab = "Years", 
-  ylab = "Overall survival probability",
-  # risk.table = T,
-  pval=T,
-  pval.method=T,
-  # cumevents = T,
-  break.time.by = 1,
-  # surv.median.line = "v",  # add the median survival pointer.
-  legend.labs = c("3 cycle surgery",'6 cycle surgery'),
-  legend= 'right', 
-  pval.coord=c(0,0.04),
-  pval.method.coord=c(0,0.12),
-  palette = 'Dark2',
-)
-
-```
-
-## KM Survival curve w.r.t progression free survival
-
-Plot KM curve with respect to adjuvant management option: adjuvant chemo vs surveillence
-```{r KM curve rfs,echo=FALSE,warning=FALSE}
-
-survminer::ggsurvplot(
-  fit = survfit(Surv(time=pfs_time,event=pfs_status) ~ patient_group, data = clinical_df), 
-  xlab = "Years", 
-  ylab = "Progression free survival probability",
-  # risk.table = T,
-  pval=T,
-  pval.method=T,
-  # cumevents = T,
-  break.time.by = 1,
-  # surv.median.line = "v",  # add the median survival pointer.
-  legend='right',
-  legend.labs = c("3 cycle surgery",'6 cycle surgery'),
-  pval.coord=c(5,0.02),
-  pval.method.coord=c(5,0.1),
-  palette = 'Dark2'
-)
-
-```
-
-## Missing data pattern
+# Missing data pattern
 ```{r missing data plot,echo=F}
 # TODO can be replaced with naniar
 
-clinical_multi_df %>% naniar::vis_miss()
-
-clinical_multi_df %>% naniar::vis_miss()
+# clinical_multi_df %>% naniar::vis_miss()
 
 na_pattern_df <- as.data.table(clinical_multi_df[,apply(.SD,2,function(x){return(is.na(x))}),.SDcols=!c('patient_id')])
 na_pattern_df[,patient_id:=clinical_multi_df[,patient_id]]
@@ -118,248 +45,413 @@ ggplot(data=na_pattern_plot_df)+
 
 ```
 
+***
 
-## Multivariate cox regression
+# Comparing survival profile between patients receiving 3 cycle vs 6 cycle of neo-adjuvant chemotherapy 
 
-Cox analysis for overall survival adjusting for the following clinical parameters: age at diagnosis, , baseline histological grade, cancer staging after surgery
+> Patients who remains inoperable after 3 cycles of Neoadjuvant chemotherapy went on for further cycles before going for surgeries. We wanted to assess if there is any survival difference stemming from the different number of cycles of neoadjuvant chemotherapy received. We assessed any possible survival difference via log-rank test using the KM curve as well as multi-variate cox regression model adjusted for confounding factors including age, performance status, initial figo staging and surgical outcome.
 
-```{r multi-cox os, echo=FALSE}
-coxph_os_model <- coxph(
-  Surv(time = os_time, event = os_status) ~ type_of_chemo_cleaned + change_in_chemo + patient_group + age_at_diagnosis +
-    figo_staging + performance_status + brca_status +
-    surgical_outcome + maintenance_therapy,
-  data = clinical_multi_df
-) 
+## Clinical summary table comparing baseline characteristics between 3 cycle vs 6 cycle group 
 
-coxph_os_model_less_surgical <- coxph(
-  Surv(time = os_time, event = os_status) ~ type_of_chemo_cleaned + change_in_chemo + patient_group + age_at_diagnosis +
-    figo_staging + performance_status + brca_status + maintenance_therapy,
-  data = clinical_multi_df
-) 
+> Baseline comparison between the two groups revealed [to be filled]
 
-coxph_os_model_less_brac <- coxph(
-  Surv(time = os_time, event = os_status) ~ type_of_chemo_cleaned + change_in_chemo + patient_group + age_at_diagnosis +
-    figo_staging + performance_status + 
-    maintenance_therapy + surgical_outcome,
-  data = clinical_multi_df
-) 
+```{r,echo=FALSE,warning=FALSE}
 
-
-coxph_os_model %>%
-  generics::tidy(exponentiate = TRUE, conf.int = TRUE)
-
-```
-
-## Multivariate cox regression with pfs
-
-Cox analysis for recurrence free survival adjusting 
-
-```{r multi-cox pfs, echo=FALSE}
-
-coxph_ps_model <- coxph(
-  Surv(time = pfs_time, event = pfs_status) ~ type_of_chemo_cleaned+ change_in_chemo + patient_group + age_at_diagnosis +
-    figo_staging + performance_status + brca_status +
-    surgical_outcome + maintenance_therapy,
-  data = clinical_df
-) 
-
-coxph_ps_model_less_surgical <- coxph(
-  Surv(time = pfs_time, event = pfs_status) ~ type_of_chemo_cleaned+ change_in_chemo + patient_group + age_at_diagnosis +
-    figo_staging + performance_status + brca_status + maintenance_therapy,
-  data = clinical_df
-) 
-
-coxph_ps_model_less_brca <- coxph(
-  Surv(time = pfs_time, event = pfs_status) ~ type_of_chemo_cleaned+ change_in_chemo + patient_group + age_at_diagnosis +
-    figo_staging + performance_status + brca_status +
-    surgical_outcome + maintenance_therapy,
-  data = clinical_df
-) 
-
-coxph_ps_model %>%
-  generics::tidy(exponentiate = TRUE, conf.int = TRUE)
+tbl_summary(data=clinical_multi_df[,!c('patient_id','os_time','os_status','pfs_time','pfs_status')],
+            by='patient_group',
+            label = list(age_at_diagnosis ~ 'Age at diagnosis',
+                         # os_time ~ 'Follow up time',
+                         # os_status ~ 'Number of overall death',
+                         # pfs_time ~ 'Progression free survival time',
+                         # pfs_status ~ 'Number of disease progression',
+                         patient_group ~ 'patient group',
+                         figo_staging ~ 'figo staging',
+                         performance_status ~ 'performance status',
+                         brca_status ~ 'brca status',
+                         surgical_outcome ~ 'surgical outcome',
+                         maintenance_therapy ~ 'maintenance therapy'),
+            missing='no',
+            theme_gtsummary_journal(journal='jama')) %>%
+  add_n() %>% # add column with total number of non-missing observations
+  add_p() %>% # test for a difference between groups
+  bold_labels() %>%
+  bold_p()
 
 
 ```
 
-## Multi cox analysis table
+## KM Survival curve w.r.t overall survival between 3 cycle and 6 cycle surgery group
+
+> No significant difference was noted between the KM survival curve between 3 cycle and 6 cycle surgery group assessed by log-rank test (p=0.25).
+
+```{r KM curve os,echo=FALSE,warning=FALSE}
+clinical_df %>%
+  filter(patient_group %in% c('3_cycle_surgery','6_cycle_surgery')) %>%
+  survminer::ggsurvplot(
+    fit = survfit(Surv(time=os_time,event=os_status) ~ patient_group, data = .),
+    xlab = "Years",
+    ylab = "Overall survival probability",
+    # risk.table = T,
+    pval=T,
+    pval.method=T,
+    # cumevents = T,
+    break.time.by = 1,
+    # surv.median.line = "v",  # add the median survival pointer.
+    legend.labs = c("3 cycle surgery",'6 cycle surgery'),
+    legend= 'right',
+    pval.coord=c(0,0.04),
+    pval.method.coord=c(0,0.12),
+    palette = 'Dark2',
+  )
+
+```
+
+## KM Survival curve w.r.t progression free survival between 3 cycle and 6 cycle surgery group
+
+> No significant difference was noted between the KM survival curve between 3 cycle and 6 cycle surgery group assessed by log-rank test (p=0.15).
+
+```{r KM curve rfs,echo=FALSE,warning=FALSE}
+clinical_df %>%
+  filter(patient_group %in% c('3_cycle_surgery','6_cycle_surgery')) %>%
+  survminer::ggsurvplot(
+    fit = survfit(Surv(time=pfs_time,event=pfs_status) ~ patient_group, data = .),
+    xlab = "Years",
+    ylab = "Progression free survival probability",
+    # risk.table = T,
+    pval=T,
+    pval.method=T,
+    # cumevents = T,
+    break.time.by = 1,
+    # surv.median.line = "v",  # add the median survival pointer.
+    legend='right',
+    legend.labs = c("3 cycle surgery",'6 cycle surgery'),
+    pval.coord=c(5,0.02),
+    pval.method.coord=c(5,0.1),
+    palette = 'Dark2'
+  )
+
+```
+
+<!-- ## Univariate cox regression assessing between 3 cycle and 6 cycle surgery -->
+
+```{r uni cox,include=FALSE,eval=FALSE}
+
+pfs_uni_surv_table <- clinical_multi_df %>%
+  filter(patient_group %in% c('3_cycle_surgery','6_cycle_surgery')) %>%
+  tbl_uvregression(
+    data={.[,!c('patient_id','os_status','os_time')]},
+    method = coxph,
+    y = Surv(time=pfs_time, event=pfs_status),
+    label = list(age_at_diagnosis ~ 'age at diagnosis',
+                 patient_group ~ 'patient group',
+                 figo_staging ~ 'figo staging',
+                 performance_status ~ 'performance status',
+                 brca_status ~ 'brca status',
+                 surgical_outcome ~ 'surgical outcome',
+                 maintenance_therapy ~ 'maintenance therapy'),
+    exponentiate = TRUE,
+    pvalue_fun = function(x) style_pvalue(x, digits = 2)
+  ) %>%
+  bold_p() %>%
+  modify_caption("**Progression free survival as endpoint**")
+
+pfs_uni_surv_table
+#
+# pfs_uni_surv_table_summary_stats <-
+#   clinical_multi_df[!is.na('rfs_status')&!is.na('rfs_time'),!c('patient_id','os_status','os_time','pfs_status','pfs_time','patient_group')] %>%
+#   tbl_summary(missing = "no",
+#               label = list(age_at_diagnosis ~ 'age at diagnosis',
+#                # patient_group ~ 'patient group',
+#                figo_staging ~ 'figo staging',
+#                performance_status ~ 'performance status',
+#                brca_status ~ 'brca status',
+#                surgical_outcome ~ 'surgical outcome',
+#                maintenance_therapy ~ 'maintenance therapy')) %>%
+#   modify_header(stat_0 ~ "**Summary Statistics**")
+#
+# pfs_uni_surv_combined_table <-
+#   tbl_merge(tbls = list(pfs_uni_surv_table_summary_stats,pfs_uni_surv_table)) %>%
+#   modify_spanning_header(everything() ~ NA_character_)
+#
+
+
+os_uni_surv_table <- clinical_multi_df %>%
+  filter(patient_group %in% c('3_cycle_surgery','6_cycle_surgery')) %>%
+  tbl_uvregression(
+    data=.[,!c('patient_id','pfs_status','pfs_time','patient_group')],
+    method = coxph,
+    y = Surv(time=os_time, event=os_status),
+    label = list(age_at_diagnosis ~ 'age at diagnosis',
+                 # patient_group ~ 'patient group',
+                 figo_staging ~ 'figo staging',
+                 performance_status ~ 'performance status',
+                 brca_status ~ 'brca status',
+                 surgical_outcome ~ 'surgical outcome',
+                 maintenance_therapy ~ 'maintenance therapy'),
+    exponentiate = TRUE,
+    pvalue_fun = function(x) style_pvalue(x, digits = 2)
+  ) %>%
+  bold_p()%>%
+  modify_caption("**Overall survival as endpoint**")
+
+os_uni_surv_table
+
+
+combined_uni_survival_table <-
+  tbl_merge(
+    tbls = list(os_uni_surv_table, pfs_uni_surv_table),
+    tab_spanner = c("**Overall survival**", "**Progression free survival**")
+  )
+
+combined_uni_survival_table
+
+```
+
+## Multi cox analysis between 3 and 6 cycle surgery 
+> Compare both os and pfs between 3 and 6 cycle of chemotherapy before going for interval debulking surgery while adjusting for age, performance status, figo staging surgical outcome.
+
+> 6 cycle group is associated with a increased progression free survival after adjusting for clinical confounders, with a hazard raito of 0.56 (95% CI 0.34 to 0.93, p=0.026). There is a similar trend for overall survival however the result did not reach statistical significance, where 6 cycle group has a hazard ratio of 0.63 (95% CI 0.38 to 1.07, p=	0.086)
 
 ```{r ,echo=FALSE}
-os_surv_table <- coxph_os_model %>%
+
+coxph_3_6_surgery_os_model <- clinical_df %>%
+  filter(patient_group %in% c('3_cycle_surgery','6_cycle_surgery')) %>%
+  coxph(Surv(time = os_time, event = os_status) ~ patient_group + age_at_diagnosis + surgical_outcome+ figo_staging + performance_status ,
+        data = .) %>%
   tbl_regression(
     exponentiate = TRUE,
     label = list(
       age_at_diagnosis ~ 'age at diagnosis',
       patient_group ~ 'patient group',
       figo_staging ~ 'figo staging',
-      performance_status ~ 'performance status',
-      brca_status ~ 'brca status',
-      surgical_outcome ~ 'surgical outcome',
-      maintenance_therapy ~ 'maintenance therapy'
-    )
+      performance_status ~ 'performance status')
   ) %>%
   add_n() %>%
   add_significance_stars(hide_p=FALSE,hide_ci=FALSE) %>%
   bold_p()
 
 
-pfs_surv_table <- coxph_ps_model %>%
+coxph_3_6_surgery_pfs_model <- clinical_df %>%
+  filter(patient_group %in% c('3_cycle_surgery','6_cycle_surgery')) %>%
+  coxph(Surv(time = pfs_time, event = pfs_status) ~ patient_group + age_at_diagnosis + figo_staging + performance_status+surgical_outcome, data = .) %>%
   tbl_regression(
     exponentiate = TRUE,
     label = list(
       age_at_diagnosis ~ 'age at diagnosis',
       patient_group ~ 'patient group',
       figo_staging ~ 'figo staging',
+      performance_status ~ 'performance status')) %>%
+  add_n() %>%
+  add_significance_stars(hide_p=FALSE,hide_ci=FALSE) %>%
+  bold_p()
+
+
+combined_survival_table <-
+  tbl_merge(
+    tbls = list(coxph_3_6_surgery_os_model, coxph_3_6_surgery_pfs_model),
+    tab_spanner = c("**Overall survival**", "**Progression free survival**")
+  )
+
+combined_survival_table
+```
+
+***
+# Compare utility of chemotherapy switch after no-response to 3 cycles of Nac
+
+> Patients who remains inoperable after 3 cycles of Neoadjuvant chemotherapy went on for further chemotherapies and a subset subsequently achieved satisfactory tumour regression and therefore deemed operable after completing 6 cycles. Within this patient population, we wanted to assess if switching chemotherapy added survival benefit. For patients who received 6 cycle of Nac and subseuqent interval debulking surgery, we assessed any possible survival difference between patient who had either switch in chemo or same chemo via log-rank test using the KM curve as well as multi-variate cox regression model adjusted for confounding factors including age, performance status and initial figo staging
+
+## KM Survival curve w.r.t overall survival between 6 cycle switch and 6 cycle no-switch group
+
+> There was no signficant difference in overall survival between the two groups from log-rank test in KM curve (p=0.19)
+
+```{r KM curve os chemo switch,echo=FALSE,warning=FALSE}
+clinical_df %>%
+  filter(patient_group %in% c('6_cycle_surgery')) %>%
+  survminer::ggsurvplot(
+    fit = survfit(Surv(time=os_time,event=os_status) ~ change_in_chemo_new, data = .),
+    xlab = "Years",
+    ylab = "Overall survival probability",
+    # risk.table = T,
+    pval=T,
+    pval.method=T,
+    # cumevents = T,
+    break.time.by = 1,
+    # surv.median.line = "v",  # add the median survival pointer.
+    legend.labs = c("switched chemo",'no switch'),
+    legend= 'right',
+    pval.coord=c(0,0.04),
+    pval.method.coord=c(0,0.12),
+    palette = 'Dark2',
+  )
+
+```
+
+## KM Survival curve w.r.t progression free survival between 6 cycle switch and 6 cycle no-switch group
+
+>There was no signficant difference in progression free survival between the two groups from log-rank test in KM curve (p=0.54)
+
+```{r KM curve pfs chemo switch,echo=FALSE,warning=FALSE}
+clinical_df %>%
+  filter(patient_group %in% c('6_cycle_surgery')) %>%
+  survminer::ggsurvplot(
+    fit = survfit(Surv(time=pfs_time,event=pfs_status) ~ change_in_chemo_new, data = .),
+    xlab = "Years",
+    ylab = "Progression free survival probability",
+    # risk.table = T,
+    pval=T,
+    pval.method=T,
+    # cumevents = T,
+    break.time.by = 1,
+    # surv.median.line = "v",  # add the median survival pointer.
+    legend='right',
+    legend.labs = c("switched chemo",'no switch'),
+    pval.coord=c(5,0.02),
+    pval.method.coord=c(5,0.1),
+    palette = 'Dark2'
+  )
+
+```
+
+
+## Multi cox analysis between 6 cycle chemo switch and no switch who received surgery
+>Compare both os and pfs between chemo switch and no switch group during 6 cycle of neoadjvuant chemotherapy before going for interval debulking surgery while adjusting for age, performance status, figo staging surgical outcome.
+
+>Patient who did not have a switch in their neoadjuvant chemotherapy had a significantly raised hazard ratio of 14.9 for overall survival (95% C.I. 2.48 - 89.6, p=0.03)
+This effect was not observed for progression free survival where patient who had no switch in neoadjuvant chemotherapy had a hazard ratio of 1.91 (95% C.I. 0.49-7.51, p=0.35)
+
+
+```{r ,echo=FALSE}
+
+coxph_chemo_switch_6_surgery_os_model <- clinical_df %>%
+  filter(patient_group %in% c('6_cycle_surgery')) %>%
+  coxph(Surv(time = os_time, event = os_status) ~ change_in_chemo_new + age_at_diagnosis + surgical_outcome+ figo_staging + performance_status,
+        data = .) %>%
+  tbl_regression(
+    exponentiate = TRUE,
+    label = list(
+      age_at_diagnosis ~ 'age at diagnosis',
+      figo_staging ~ 'figo staging',
       performance_status ~ 'performance status',
-      brca_status ~ 'brca status',
-      surgical_outcome ~ 'surgical outcome',
-      maintenance_therapy ~ 'maintenance therapy'
-    )
+      change_in_chemo_new ~ 'chemotherapy switch')
   ) %>%
   add_n() %>%
-  add_significance_stars(hide_p=FALSE,hide_ci=FALSE)%>%
+  add_significance_stars(hide_p=FALSE,hide_ci=FALSE) %>%
+  bold_p()
+
+# Firth penalised if needed, does not change CI and p value from normal cox too much
+# clinical_df %>%
+#   filter(patient_group %in% c('6_cycle_surgery')) %>%
+#   select(os_time,os_status,change_in_chemo_new,age_at_diagnosis,surgical_outcome,figo_staging,performance_status) %>%
+#   na.omit(.) %>%
+#   coxphf::coxphf(Surv(time = os_time, event = os_status) ~ change_in_chemo_new + age_at_diagnosis + surgical_outcome+ figo_staging + performance_status, maxit=500,
+#         data = .)
+
+coxph_chemo_switch_6_surgery_pfs_model <- clinical_df %>%
+  filter(patient_group %in% c('6_cycle_surgery')) %>%
+  coxph(Surv(time = pfs_time, event = pfs_status) ~ change_in_chemo_new + age_at_diagnosis + figo_staging + performance_status+surgical_outcome, data = .) %>%
+  tbl_regression(
+    exponentiate = TRUE,
+    label = list(
+      age_at_diagnosis ~ 'age at diagnosis',
+      change_in_chemo_new ~ 'chemotherapy switch',
+      figo_staging ~ 'figo staging',
+      performance_status ~ 'performance status')) %>%
+  add_n() %>%
+  add_significance_stars(hide_p=FALSE,hide_ci=FALSE) %>%
+  bold_p()
+
+
+combined_survival_table <-
+  tbl_merge(
+    tbls = list(coxph_chemo_switch_6_surgery_os_model, coxph_chemo_switch_6_surgery_pfs_model),
+    tab_spanner = c("**Overall survival**", "**Progression free survival**")
+  )
+
+combined_survival_table
+```
+
+
+***
+# Finding baseline predictors of inoperability after 6 cycles of neoadjuvant chemotherapy
+
+>Finally, we aimed to establish prognostic factors that can predict the lack of response to 6 lines of neoadjuvant chemotherapy and eventual surgical inoperability. Logistic regression was performed to predict the eventual outcome of either operable and inoperable.
+
+>Note in this analysis, change into anti-hormone or stopping chemotherapy wasn't counted as chemo switch as they do not represent a switch for any potential added benefit
+
+>Old age was significantly associated with inoperability with an odds ratio of 1.09 (95% CI 1.05  to 1.14, p < 0.001). Meanwhile, worsening performance status of 3 shows a trend towards inoperability but did not reach statistical significance with an odds ratio of 4.86 (95% CI 0.89 to 27.7, p=0.067). No change in Nac regimen is significantly associated with eventual operability with an odds ratio of 0.13 (95% CI 0.04 to 0.37, p<0.001)
+
+```{r Predict inoperability}
+
+clinical_multi_df %>%
+  # Exclude anti-hormone and stopping chemo as "changed chemo"
+  mutate(change_in_chemo_new = ifelse(new_chemo_cleaned %in% c('anti-hormone','stopped'),NA,change_in_chemo_new)) %>%
+  mutate(patient_group = ifelse(patient_group=='6_cycle_no_surgery',1,0)) %>%
+  glm(patient_group ~ age_at_diagnosis + figo_staging + performance_status+ change_in_chemo_new, data=.,family = binomial) %>%
+  tbl_regression(exponentiate=TRUE,
+                 label = list(
+                   age_at_diagnosis ~ 'age at diagnosis',
+                   change_in_chemo_new ~ 'chemotherapy switch',
+                   figo_staging ~ 'figo staging',
+                   performance_status ~ 'performance status')) %>%
+  add_n() %>%
+  add_significance_stars(hide_p=FALSE,hide_ci=FALSE) %>%
   bold_p()
 # 
-# summary_table <- clinical_multi_df[,.(age_at_diagnosis,patient_group,figo_staging,performance_status,
-#                          brca_status,surgical_outcome,maintenance_therapy)] %>% 
-#   tbl_summary(missing = "no") %>% 
-#   add_n() %>% 
-#   modify_header(stat_0 ~ "**n (%)**") %>%
-#   modify_footnote(stat_0 ~ NA_character_)
-
-
-combined_survival_table <-
-  tbl_merge(
-    tbls = list(os_surv_table, pfs_surv_table),
-    tab_spanner = c("**Overall survival**", "**Progression free survival**")
-  )
-
-combined_survival_table
-```
-
-## Multi cox analysis table less brca
-
-```{r ,echo=FALSE}
-os_surv_table <- coxph_os_model_less_brac %>%
-  tbl_regression(
-    exponentiate = TRUE,
-    label = list(
-      age_at_diagnosis ~ 'age at diagnosis',
-      patient_group ~ 'patient group',
-      figo_staging ~ 'figo staging',
-      performance_status ~ 'performance status',
-      surgical_outcome ~ 'surgical outcome',
-      maintenance_therapy ~ 'maintenance therapy'
-    )
-  ) %>%
-  add_n() %>%
-  add_significance_stars()
-
-
-pfs_surv_table <- coxph_ps_model_less_brca %>%
-  tbl_regression(
-    exponentiate = TRUE,
-    label = list(
-      age_at_diagnosis ~ 'age at diagnosis',
-      patient_group ~ 'patient group',
-      figo_staging ~ 'figo staging',
-      performance_status ~ 'performance status',
-      surgical_outcome ~ 'surgical outcome',
-      maintenance_therapy ~ 'maintenance therapy'
-    )
-  ) %>%
-  add_n() %>%
-  add_significance_stars()
+# char_to_fct <- function(x){
+#   if(class(x)=='character'){
+#     return(forcats::as_factor(x))
+#   } else{
+#     return(x)
+#   }   
+# }
 # 
-# summary_table <- clinical_multi_df[,.(age_at_diagnosis,patient_group,figo_staging,performance_status,
-#                          brca_status,surgical_outcome,maintenance_therapy)] %>% 
-#   tbl_summary(missing = "no") %>% 
-#   add_n() %>% 
-#   modify_header(stat_0 ~ "**n (%)**") %>%
-#   modify_footnote(stat_0 ~ NA_character_)
+# pred_mod <- logistf(patient_group ~ age_at_diagnosis+type_of_chemo_cleaned + figo_staging + performance_status, data=clinical_reg_df)
 
-
-combined_survival_table <-
-  tbl_merge(
-    tbls = list(os_surv_table, pfs_surv_table),
-    tab_spanner = c("**Overall survival**", "**Progression free survival**")
-  )
-
-combined_survival_table
 ```
 
-## Multi cox analysis table less surgical
 
-```{r ,echo=FALSE}
-os_surv_table <- coxph_os_model_less_surgical %>%
-  tbl_regression(
-    exponentiate = TRUE,
-    label = list(
-      age_at_diagnosis ~ 'age at diagnosis',
-      patient_group ~ 'patient group',
-      figo_staging ~ 'figo staging',
-      performance_status ~ 'performance status',
-      brca_status ~ 'brca status',
-      maintenance_therapy ~ 'maintenance therapy'
-    )
-  ) %>%
+## Predict operability specifically in 6 cycle group
+
+> Considering all 3 cycle surgery group wouldn't have a change in chemotherapy potentially biasing the result, we repeated the analysis looking specifically within patients who received 6 cycles of Nac before interval debulking surgery. 
+
+> Similar results could again be replicated for old age where it was significantly associated with inoperability with an odds ratio of 1.07 (95% CI 1.02  to 1.12, p = 0.006). However, no change in Nac regimen is no longer significantly associated with eventual operability with an odds ratio of 0.41 (95% CI 0.546 to 1.19, p=0.10)
+
+```{r}
+
+
+clinical_multi_df %>%
+  filter(patient_group %in% c('6_cycle_surgery','6_cycle_no_surgery')) %>%
+  # Exclude anti-hormone and stopping chemo as "changed chemo"
+  mutate(change_in_chemo_new = ifelse(new_chemo_cleaned %in% c('anti-hormone','stopped'),NA,change_in_chemo_new)) %>%
+  mutate(patient_group = ifelse(patient_group=='6_cycle_no_surgery',1,0)) %>%
+  glm(patient_group ~ age_at_diagnosis + figo_staging + performance_status+ change_in_chemo_new, data=.,family = binomial) %>%
+  tbl_regression(exponentiate=TRUE,
+                 label = list(
+                   age_at_diagnosis ~ 'age at diagnosis',
+                   change_in_chemo_new ~ 'chemotherapy switch',
+                   figo_staging ~ 'figo staging',
+                   performance_status ~ 'performance status')) %>%
   add_n() %>%
-  add_significance_stars()
+  add_significance_stars(hide_p=FALSE,hide_ci=FALSE) %>%
+  bold_p()
 
-
-pfs_surv_table <- coxph_ps_model_less_surgical %>%
-  tbl_regression(
-    exponentiate = TRUE,
-    label = list(
-      age_at_diagnosis ~ 'age at diagnosis',
-      patient_group ~ 'patient group',
-      figo_staging ~ 'figo staging',
-      performance_status ~ 'performance status',
-      brca_status ~ 'brca status',
-      maintenance_therapy ~ 'maintenance therapy'
-    )
-  ) %>%
-  add_n() %>%
-  add_significance_stars()
+# logistf.control(maxit = 500,maxstep = 1)
 # 
-# summary_table <- clinical_multi_df[,.(age_at_diagnosis,patient_group,figo_staging,performance_status,
-#                          brca_status,surgical_outcome,maintenance_therapy)] %>% 
-#   tbl_summary(missing = "no") %>% 
-#   add_n() %>% 
-#   modify_header(stat_0 ~ "**n (%)**") %>%
-#   modify_footnote(stat_0 ~ NA_character_)
+# chemo_switch_model <- glm(patient_group ~ age_at_diagnosis+type_of_chemo_cleaned + figo_staging + performance_status+change_in_chemo, data=chemo_switch_reg_df[performance_status!=4], family = binomial)
+# 
+# summary(test)
+# 
+# chemo_switch_mod <- logistf(patient_group ~ age_at_diagnosis+type_of_chemo_cleaned + figo_staging + performance_status+change_in_chemo, data=chemo_switch_reg_df[performance_status!=4])
+# 
+# chemo_switch_model %>%
+#   tbl_regression() %>%
+#   add_n()%>%
+#   bold_p()
 
 
-combined_survival_table <-
-  tbl_merge(
-    tbls = list(os_surv_table, pfs_surv_table),
-    tab_spanner = c("**Overall survival**", "**Progression free survival**")
-  )
-
-combined_survival_table
-```
-
-### Type of chemo's impact on operability
-```{r barplot}
-clinical_df %>%
-  select(outcome_after_6_cycles, type_of_chemo_cleaned) %>% 
-  drop_na() %>% 
-  count(outcome_after_6_cycles, type_of_chemo_cleaned) %>% 
-  ggplot() +
-  geom_col() +
-  aes(x = type_of_chemo_cleaned, fill = outcome_after_6_cycles, y = n) +
-  xlab("Type of Chemotherapy")
-  
 
 ```
-### change in chemo vs no change in chemo
 
-```{r chi-squre}
-clinical_df %>% count(change_in_chemo, outcome_after_6_cycles) %>% 
-  drop_na() %>% 
-  pivot_wider(names_from = change_in_chemo, values_from = n) %>% 
-  column_to_rownames("outcome_after_6_cycles") %>% 
-  # mutate(no_change = replace_na(no_change, 0)) 
-  chisq.test()
-```
+
+
 
